# js-benchmark

.github/workflows/: wasm-benchmark.yml
dom/: htmlelement.js
generic/: array-clone.js  array-set.js
genic/: array-clone.js  array-set.js
wasm/: .gitignore  CMakeLists.txt  README.md  benchmark.mjs  package-lock.json  package.json
wasm/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
wasm/benchmarks/: benchmark_cstruct.mjs  benchmark_embind.mjs  benchmark_json.mjs  benchmark_msgpack.mjs  flat.mjs  nested.mjs  numbers.mjs  objects.mjs  tree.mjs  utils.mjs
wasm/src/: benchmark_cstruct.cpp  benchmark_embind.cpp  benchmark_json.cpp  benchmark_msgpack.cpp
